removed deprecated use of Class.newInstance