@@ -584,11 +584,10 @@ public class GraphPrintVisitor implements Closeable {
         return this;
     }
 
-    @SuppressWarnings("deprecation")
     private static GraphPrintHandler createGraphPrintHandlerFromClass(Class<? extends GraphPrintHandler> customHandlerClass) {
         try {
-            return customHandlerClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return customHandlerClass.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
             throw new AssertionError(e);
         }
     }
